added search, sort and filter for emails